# Parallel-Ray-Tracer

./: .gitignore  CMakeLists.txt  image.ppm  server.py
include/: camera.h  color.h  hittable.h  hittable_list.h  material.h  ray.h  render.h  rtweekend.h  sphere.h  vec3.h
src/: main.cpp
